force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/Capacity_Planning_SBC_Calculation_Weight__mdt.object-meta.xml
<CustomObject>
    <label>Capacity Planning SBC Calculation Weight</label>
    <pluralLabel>Capacity Planning SBC Calculation Weight</pluralLabel>
</CustomObject>