force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/ASO_Specialty_Sets_Weightage__c.field-meta.xml
<CustomField>
    <fullName>ASO_Specialty_Sets_Weightage__c</fullName>
    <label>ASO Specialty Sets Weightage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>