force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Custom_Reporting_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reporting_Multiplier__c</fullName>
    <label>Custom Reporting Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>