force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Custom_Reporting_Weightge__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reporting_Weightge__c</fullName>
    <label>Custom Reporting Weightge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>