force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/External_Customer_Layers_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Layers_Multiplier__c</fullName>
    <label>External Customer Layers Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>