force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/FI_Specialty_Sets_Weightage__c.field-meta.xml
<CustomField>
    <fullName>FI_Specialty_Sets_Weightage__c</fullName>
    <label>FI Specialty Sets Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>