force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Internal_Customer_Layers_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Internal_Customer_Layers_Multiplier__c</fullName>
    <label>Internal Customer Layers Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>