force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Membership_Make_up_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Make_up_Multiplier__c</fullName>
    <label>Membership Make-up Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>