force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Membership_Make_up_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Membership_Make_up_Weightage__c</fullName>
    <label>Membership Make-up Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>