force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Specialty_Open_Enrollment_Meeting_Weight__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Open_Enrollment_Meeting_Weight__c</fullName>
    <label>Specialty Open Enrollment Meeting Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>