force-app/main/default/objects/Capacity_Planning_SBC_Calculation_Weight__mdt/fields/Specialty_PVRC_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Specialty_PVRC_Weightage__c</fullName>
    <label>Specialty PVRC Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>